# Homomorphic-Tree-Evaluator

./: .gitignore  README.md  bootstrap.sh
source/: BasicExamples.cpp  BasicExamples.h  CMakeLists.txt  Client.cpp  Client.h  Encryptor.cpp  Encryptor.h  FileSystem.cpp  FileSystem.h  TreeEvaluator.cpp  TreeEvaluator.h  Util.cpp  Util.h  cmake_install.cmake  main.cpp
